KDE_OPTIONS = noautodist

INCLUDES = $(all_includes) -I$(top_srcdir)
METASOURCES = AUTO

noinst_LTLIBRARIES =  libkgpgfile.la
libkgpgfile_la_SOURCES = kgpgfile.cpp
libkgpgfile_la_LDFLAGS = $(all_libraries) $(KDE_RPATH)
#libkgpgfile_la_LIBADD = $(top_builddir)/libkdepim/libkdepim.la

noinst_HEADERS = kgpgfile.h
