####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = blank_icon.png mainwindow.png newaccount.png newaccount_icon.png newbank.png newbank_icon.png startdialog.png transwindow.png 

####### kdevelop will overwrite this part!!! (end)############

KDE_LANG = en
KDE_DOCS = kmymoney2


