####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libdialogs_a_METASOURCES = AUTO

noinst_LIBRARIES = libdialogs.a

libdialogs_a_SOURCES = kcsvprogressdlg.cpp kcsvprogressdlgdecl.ui kchooseimportexportdlgdecl.ui kchooseimportexportdlg.cpp kbackupdlgdecl.ui kbackupdlg.cpp 


EXTRA_DIST = kbackupdlg.cpp kbackupdlg.h kbackupdlgdecl.ui kchooseimportexportdlg.cpp kchooseimportexportdlg.h kchooseimportexportdlgdecl.ui kcsvprogressdlgdecl.ui kcsvprogressdlg.cpp kcsvprogressdlg.h 

####### kdevelop will overwrite this part!!! (end)############
