####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libdialogs_a_METASOURCES = AUTO

noinst_LIBRARIES = libdialogs.a

libdialogs_a_SOURCES = kimportdlgdecl.ui kimportdlg.cpp kexportdlgdecl.ui kexportdlg.cpp kcsvprogressdlg.cpp kcsvprogressdlgdecl.ui kchooseimportexportdlgdecl.ui kchooseimportexportdlg.cpp kbackupdlgdecl.ui kbackupdlg.cpp 


EXTRA_DIST = kbackupdlg.cpp kbackupdlg.h kbackupdlgdecl.ui kchooseimportexportdlg.cpp kchooseimportexportdlg.h kchooseimportexportdlgdecl.ui kcsvprogressdlgdecl.ui kcsvprogressdlg.cpp kcsvprogressdlg.h kexportdlg.cpp kexportdlg.h kexportdlgdecl.ui kimportdlg.cpp kimportdlg.h kimportdlgdecl.ui 

####### kdevelop will overwrite this part!!! (end)############
